@@ -7,6 +7,9 @@
 	* libpam/Makefile.am: Bump release number of shared library
 	* po/de.po: Translate new string.
 
+	* modules/pam_unix/Makefile.am (pam_unix_la_LIBADD): Reorder
+	Libraries.
+
 2011-06-21  Thorsten Kukuk  <kukuk@thkukuk.de>
 
 	* modules/pam_limits/pam_limits.c: Add set_all option,
